# 3DSnake

./: CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  main.cpp
